--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -20,20 +20,12 @@
     opacity: 1;
 }
 
-// .mobile-menu__box {
-//     display: flex;
-//     flex-direction: column;
-//     width: 100%;
-//     height: 100vh;
-// }
-
 .mobile-menu__container {
     display: flex;
     height: 100vh;
     position: relative;
-    padding: 48px 20px 48px 40px;
-    overflow-y: scroll;
-    z-index: 100;
+    padding: 48px 40px;
+    overflow: scroll;
     flex-direction: column;
 }
 
@@ -61,12 +53,6 @@
 }
 
 
-
-// .mobile-menu-navigation {
-//     margin-top: 48px;
-//     margin-left: 25px;
-// }
-
 .mobile-menu-navigation__link {
     display: block;
     font-weight: 500;
@@ -88,23 +74,19 @@
     margin-bottom: 32px;
 }
 
-// .mobile-menu-navigation__link.current:not(:last-child) .mobile-menu-navigation__item {
-//     margin-bottom: 36px;
-// }
 
 .mobile-menu-navigation__link.current {
     color: var(--third-color);
 }
 
 .mobile-menu-contact {
-    margin-left: 64px;
     margin-top: auto;
 }
 
 .mobile-menu-contact__tel {
     display: block;
     font-weight: 500;
-    font-size: 34px;
+    font-size: 24px;
     line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--third-color);
@@ -121,7 +103,7 @@
     line-height: 1.17;
     letter-spacing: 0.02em;
     text-decoration: none;
-
+    margin-bottom: 32px;
     color: var(--second-color);
     transition: color var(--transition-duration);
 
@@ -131,9 +113,6 @@
     }
 }
 
-// .mobile-menu-contact__item:not(:last-child) {
-//     margin-bottom: 32px;
-// }
 
 .mobile-menu-social-media {
     display: flex;
@@ -173,42 +152,21 @@ transition: color var(--transition-duration);}
     .mobile-menu{
         display: none;
     }
+    
+    .mobile-menu-social-media__link {
+     font-size: 18px;
+    }
 }
 
 @media screen and (max-width: 479px) {
-    .mobile-menu-contact__tel {
-        margin-bottom: 4vh;
-    }
-
-    .mobile-menu-contact {
-        margin-bottom: 8vh;
-    }
-
-    .mobile-menu-navigation__item:not(:last-child) {
-        padding-bottom: 4vh;
-    }
-
-    .mobile-menu__container {
-        padding: 6vh 4vw 6vh 8vw;
-    }
-
-    .mobile-menu-social-media__item{
-        padding-top: 1vh;
-    }
-
-    .mobile-menu-social-media__link {
-        font-size: 8.51vw;
-    }
-
-    .mobile-menu-contact__tel {
-        font-size: 7.01vw;
-    }
-
-    .mobile-menu-contact__mail {
-        font-size: 5.01vw;
-    }
-
-    .mmobile-menu-social-media__link {
+    .mobile-menu-social-media__link{
         font-size: 4vw;
+    }
+    .mobile-menu-contact__tel,
+    .mobile-menu-contact__mail{
+        font-size: 5vw;
+    }
+    .mobile-menu-navigation__link{
+        font-size: 8vw;
     }
 }
