--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -7,12 +7,27 @@
 
 .feedback {
     font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
+    // font-size: 20px;
+    // line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--main-color);
     margin-bottom: 12px;
+    
+    @media screen and(max-width: 479px) {
+    font-size: calc(2vw + 9px);
+}
+
+@media screen and (min-width: 480px) {
+    font-size: 20px;
+}
+line-height: 1.5;
+text-align: center;
+margin-bottom: 12px;
+
+@media screen and (min-width: 1200px) {
+    line-height: 1.15;
+}
 }
 
 .modal-form {
