--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,15 +1,46 @@
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
+    position: relative;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%);
+    // width: 528px;
+    // height: 581px;
     padding: 40px;
     background-color: var(--fourth-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    @media screen and (max-width: 480px) {
+        padding: 8vw;
+        overflow-y: scroll;
+    }
+    // .modal-form-comment {
+    //     height: calc(20vw + 20px);
+    // }
+
+@media screen and (max-width: 767px) {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+    height: auto; 
+}
+
+@media screen and (min-width: 768px){
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+}
+@media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+}
+
 }
 
 .modal-close-btn {
