--- a/sass/layout/_porfolio-cards.scss
+++ b/sass/layout/_porfolio-cards.scss
@@ -2,6 +2,16 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+
+    @media screen and (max-width: 767px) {
+        flex-direction: column;
+    }
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
 }
 
 .portfolio-card__title {
@@ -27,13 +37,20 @@
 .portfolio-card {
     cursor: pointer;
     border: 1px solid var(--border-header);
-    width: 370px;
+    width: 100%;
     transition: box-shadow var(--transition-duration);
 
      &:hover {
-        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);}
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
 }
+    @media screen and (min-width: 768px) {
+        width: calc((100% - 30px) / 2);
+    }
 
+    @media screen and (min-width: 1200px) {
+        width: calc((100% - 2 * 30px) / 3);
+    }
+}
 
 
 .portfolio-card__wrapper {
@@ -43,7 +60,7 @@
 
 .portfolio-card__overlay {
     position: absolute;
-    top: 0;
+    top: 100%;
     left: 0;
     background-color: rgba(33, 150, 243, 0.9);
     color: var(--fourth-color);
@@ -58,6 +75,6 @@
     transition: transform var(--transition-duration);
 
     .portfolio-card:hover & {
-        transform: translateY(0%);}
+        transform: translateY(0%);
+    }
 }
-
