--- a/sass/layout/_portfolio-filter-btn.scss
+++ b/sass/layout/_portfolio-filter-btn.scss
@@ -27,4 +27,19 @@
     justify-content: center;
     gap: 8px;
     margin-bottom: 50px;
+
+    @media screen and (max-width: 767px) {
+        flex-wrap: wrap;
+        row-gap: 15px;
+        justify-content: start;
+        max-width: 350px;
+        }
+    
+    @media screen and (min-width: 768px) {
+        margin-bottom: 30px;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    }
 }
