--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,10 @@ ul {
   list-style: none;
 }
 
+a {
+  text-decoration: none;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -1032,62 +1036,61 @@ img {
   }
 }
 
-.portfolio {
+.portfolio-card {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 @media screen and (max-width: 767px) {
-  .portfolio {
+  .portfolio-card {
     flex-direction: column;
   }
 }
-@media screen and (min-width: 768px) {
-  .portfolio {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-  }
-}
 
-.portfolio-card__title {
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-right: 24px;
-  margin-bottom: 4px;
-}
-
-.portfolio-card__text {
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.03em;
-  color: var(--second-color);
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-bottom: 20px;
-}
-
-.portfolio-card {
-  cursor: pointer;
-  border: 1px solid var(--border-header);
+.portfolio-card__item {
   width: 100%;
-  transition: box-shadow var(--transition-duration);
-}
-.portfolio-card:hover {
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 @media screen and (min-width: 768px) {
-  .portfolio-card {
+  .portfolio-card__item {
     width: calc((100% - 30px) / 2);
   }
 }
 @media screen and (min-width: 1200px) {
-  .portfolio-card {
+  .portfolio-card__item {
     width: calc((100% - 60px) / 3);
   }
+}
+
+.portfolio-card__link {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  border: 1px solid var(--border-header);
+  transition: box-shadow var(--transition-duration);
+}
+.portfolio-card__link:hover, .portfolio-card__link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.portfolio-card__title {
+  color: var(--main-color);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+
+.portfolio-card__about {
+  padding: 20px 24px;
+  border: 1px solid var(--border-header);
+  border-top: none;
+  flex-grow: 1;
+}
+
+.portfolio-card__text {
+  color: var(--second-color);
+  font-size: 16px;
+  line-height: 1.88;
 }
 
 .portfolio-card__wrapper {
@@ -1099,20 +1102,24 @@ img {
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: rgba(33, 150, 243, 0.9);
-  color: var(--fourth-color);
+  width: 100%;
+  height: 100%;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
-  padding: 63px 24px;
-  height: 101%;
-  width: 100%;
-  /* overflow: auto; */
-  transform: translateY(100%);
+  color: var(--fourth-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 77px 24px 0;
+  overflow: auto;
   transition: transform var(--transition-duration);
 }
-.portfolio-card:hover .portfolio-card__overlay {
-  transform: translateY(0%);
+@media screen and (min-width: 768px) {
+  .portfolio-card__overlay {
+    padding: 63px 24px 0;
+  }
+}
+.portfolio-card__link:hover .portfolio-card__overlay, .portfolio-card__link:focus .portfolio-card__overlay {
+  transform: translateY(-100%);
 }
 
 .footer {
