text-decoration-agreement

--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -76,6 +76,7 @@ margin-bottom: 12px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--third-color);
+    text-decoration: underline;
 }
 
 .modal-wrapper {
