--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,7 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--third-color);
+  text-decoration: underline;
 }
 
 .modal-wrapper {
